--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
-    "deploy": "git push origin `git subtree split --prefix demo master`:gh-pages --force"
+    "deploy": "git push origin `git subtree split --prefix build master`:gh-pages --force"
   },
   "keywords": [],
   "author": "Dan Mindru <mindrudan@gmail.com> (http://mindrudan.com/)",
