--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "how-to",
-  "version": "0.1.3",
+  "name": "how-to-advanced",
+  "version": "0.1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
